ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-app
  name: spring-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: image-registry.openshift-image-registry.svc:5000/demo/spring-app
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
