ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-app
  name: spring-app-service
  namespace: demo
spec:
  type: NodePort
  ports:
    - name: https
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: spring-app
