ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-route
  labels:
    app: spring-app
spec:
  to:
    kind: Service
    name: spring-app-service
    weight: 100
  port:
    targetPort: https
  wildcardPolicy: None
